--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 {% include header.html %}
 
+{% include footer.html%}
+
 <script src="/assets/js/jquery-2.1.1.min.js"></script>
 <script src="/assets/js/functions.js" type="text/javascript"></script>
 </body>
