--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 {% include about.html %}
 
+{% include work.html %}
+
 {% include footer.html%}
 
 <script src="/assets/js/jquery-2.1.1.min.js"></script>
