Finish project - not reponsive header
Remember Fit text to customize header

--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
 
 {% include clients.html %}
 
+{% include social.html%}
+
+{% include contact.html%}
+
 {% include footer.html%}
+
+
 
 <script src="/assets/js/jquery-2.1.1.min.js"></script>
 <script src="/assets/js/functions.js" type="text/javascript"></script>
